<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/login"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@drawable/login" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    tools:ignore="ButtonStyle,TextContrastCheck"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:onClick="registerUser"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    tools:ignore="ButtonStyle,TextContrastCheck"
                    tools:visibility="visible" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>